<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/lblSaudacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/bom_dia"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layoutStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@+id/lblSaudacao">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:background="#FFEAEA"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/atrasadas"
                android:textColor="@color/red_urgency" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="4dp"
                android:background="#FFF4E5"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/pendentes"
                android:textColor="@color/orange_attention" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:background="#EAFAF1"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/feitas"
                android:textColor="@color/green_confirmation" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/anotacoes_recentes"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutStatus" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/estilo_quadrado1" />

                <View
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/estilo_quadrado1" />

                <View
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/estilo_quadrado1" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/metas_principais"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/estilo_quadrado1" />

                <View
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/estilo_quadrado1" />

                <View
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/estilo_quadrado1" />

            </LinearLayout>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>